@@ -1,3 +1,8 @@
+2004-04-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/15084
+	* gcc.c-torture/execute/20040510-1.c: New test.
+
 2002-09-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/7718
